# myblog

./: CLAUDE.md  PRD.md  README.md
backend/: .env  .env.example  CLAUDE.md  Cargo.toml  README.md  blog.db  bmm-workflow-status.md
backend/.claude/agents/: rust-cargo-expert.md
backend/bmad/_cfg/: files-manifest.csv  manifest.yaml
backend/bmad/bmm/: config.yaml
backend/bmad/core/: config.yaml
backend/docs/: architecture.md
backend/migrations/: 20251130175918_create_users_table.sql  20251130175943_create_posts_table.sql  20251130180022_create_comments_table.sql  20251130180023_create_likes_table.sql  20251130180024_create_follows_table.sql  20251130180025_create_tags_tables.sql  20251130180026_create_notifications_table.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs
backend/src/models/: auth.rs  comment.rs  follow.rs  like.rs  mod.rs  notification.rs  post.rs  tag.rs  user.rs
backend/src/utils/: jwt.rs
frontend/: .env.example  App.tsx  CLAUDE.md  README.md  package-lock.json  package.json
frontend/.claude/agents/: react-native-expert.md
frontend/bmad/_cfg/: files-manifest.csv  manifest.yaml
frontend/bmad/bmm/: config.yaml
frontend/bmad/core/: config.yaml
frontend/src/constants/: config.ts
frontend/src/navigation/: AuthStack.tsx  CreateStack.tsx  ExploreStack.tsx  HomeStack.tsx  MainTabs.tsx  NotificationsStack.tsx  ProfileStack.tsx  RootNavigator.tsx  types.ts
frontend/src/screens/: CreatePostScreen.tsx  FeedScreen.tsx  LoginScreen.tsx  MyProfileScreen.tsx  NotificationsListScreen.tsx  RegisterScreen.tsx  (+1 more)
(+2 files in other folders)
